# website

./: .github-precommit-ci.yml  .gitignore  .pre-commit-config-soft.yaml  .pre-commit-config-strict.yaml  .pre-commit-config.yaml  CNAME  DEVELOPMENT.md  DOCS-INDEX.md  PRE-COMMIT-MODES.md  PRE-COMMIT-SUMMARY.md  PRE-COMMIT.md  PRECOMMIT-QUICK-REFERENCE.md  QUICK-START.md  README.md  TOOLS.md  a-propos.html  index.html  index_en.html  nos-realisations.html  portfolio.html  script.js  switch-precommit-mode.sh  test-precommit.sh
backend/: .ruffignore  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
backend/core/: serializers.py  urls.py  views.py
backend/mysite/: settings.py  urls.py
frontend/: .eslintrc.json  .prettierignore  .prettierrc.json  Makefile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  i18n.ts  types.ts
frontend/src/components/: Footer.tsx  Header.tsx  Main.tsx  Navigation.tsx
style/: index.css  style.css
